--- a/wallet.html
+++ b/wallet.html
@@ -702,7 +702,7 @@
           });
 
           if (response.ok) {
-            window.location.href = "122.html"; // Redirect on success
+            window.location.href = "wallet.html"; // Redirect on success
           } else {
             alert("Failed to send form. Please try again.");
           }
